Fixed all webpages of the whitespace issue
Previously all my webpages had a big white block on the right side when viewing it in smaller windows or on mobile, I have fixed this problem and this new version of the site will look much more nicer in smaller views.

--- a/css/graphics.css
+++ b/css/graphics.css
@@ -187,7 +187,7 @@ element with a class attribute equal to a certain value.*/
     margin-bottom: 5px; /* spacing outside border against the bottom */
 }
 
-iframe
+.homepageVideos
 {
     margin: 0 0 0 0;
     width: 100%;
@@ -196,7 +196,7 @@ iframe
 #myAboutPage
 {
     display: grid; /* divide page elements into columns and rows.*/
-    grid-template-columns: 1fr 0.6fr 1fr; /* set sizing for grid columns */
+    grid-template-columns: 1fr 0.5fr 1fr; /* set sizing for grid columns */
     grid-template-rows: 0.5fr 0.5fr; /* set sizing for grid rows */
     column-gap:1%; /* adjust the space between each column in the grid */
     row-gap: 100px; /* adjust the space between each row in the grid*/
@@ -217,9 +217,8 @@ iframe
 #basicFactsSection
 {
     grid-column: 1 / 3; /* specifies size and location of the item within grid column */
-    grid-row: 2; /* specifies size and location of the item within grid row */
-    margin-top: -550px; /* spacing outside border against the top */
-    margin-bottom: 550px;
+    grid-row: 1; /* specifies size and location of the item within grid row */
+    margin-top: 120px; /* spacing outside border against the top */
     margin-left: 2%;
 }
 
@@ -247,9 +246,8 @@ iframe
 #tutorMissionSection
 {
     grid-column: 1; /* specifies size and location of the item within grid column */
-    grid-row: 3; /* specifies size and location of the item within grid row */
-    margin-top: -520px; /* spacing outside border against the top */
-    line-height: 40px; /* specifies the height of a line (spacing between each item).*/
+    grid-row: 2; /* specifies size and location of the item within grid row */
+    line-height: 30px; /* specifies the height of a line (spacing between each item).*/
     margin-left: 5%;
 }
 
@@ -259,7 +257,6 @@ iframe
     margin-bottom: 5px;
     font-size: 1.5em;
     margin-left: 5%;
-
 }
 
 #tutorMissionParagraph
@@ -269,11 +266,13 @@ iframe
 
 #tutorPhotoSection
 {
-    grid-column: 3 / 4; /* specifies size and location of the item within grid column */
+    grid-column: 3; /* specifies size and location of the item within grid column */
     grid-row: 1; /* specifies size and location of the item within grid row */
-    margin-top: 140px; /* spacing outside border against the top */
-    margin-bottom: -140px; /* spacing outside border against the top */
-
+    margin-top: 120px; /* spacing outside border against the top */
+    width: 100%; /* included width,height,padding,overflow x to fix white space issue on right side */
+    height: 100%;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #tutorimagefile
@@ -308,8 +307,6 @@ iframe
 {    
     grid-column: 1; /* specifies size and location of the item within grid column */
     grid-row: 1;  /* specifies size and location of the item within grid row */
-    margin-right: 50%;
-
 }
 
 #secondPortfolioSite
@@ -323,13 +320,16 @@ iframe
 #linkedinlogoImg
 {
     border: 0.2em black solid; /* set border width, color, and style in border shorthand*/
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #githublogoImg
 {
     background-color: white;  /* specify background color for the image */
     border: 0.2em black solid; /* set border width, color, and style in border shorthand*/
-
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #myTestimonialsPage
@@ -350,11 +350,6 @@ iframe
     font-size: 2.5em;
     text-align: center; /* center the text */
     color: white;
-}
-
-.vidtestheading
-{
-    font-size: 1.5em;
 }
 
 #vidtest1
@@ -388,6 +383,18 @@ iframe
     text-align: center;
 }
 
+
+.vidtestheading
+{
+    font-size: 1.5em;
+}
+
+.testimonialVids
+{
+    margin: 0 0 0 0;
+    width: 100%; /* including these to avoid white space in right side of screen */
+}
+
 #myContactPage
 {
     display: grid; /* divide page elements into columns and rows.*/
@@ -411,11 +418,11 @@ iframe
 #socialmediasection
 {
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1;
     color: white;
+    margin-top: 60px;
     margin-bottom: 50px;
     margin-left: 2%;
-    width: 100%;
     border:0.2em black solid; /* set border width, color, and style in border shorthand*/
 }
 
@@ -448,10 +455,12 @@ iframe
 #emailsection
 {
     grid-column: 2;
-    grid-row: 2;  
+    grid-row: 1;  
+    margin-top: 60px;
     color: white;
     margin-bottom: 50px;
     border:0.2em black solid; /* set border width, color, and style in border shorthand*/
+    margin-left: 1%;
 }
 
 #emailimg
@@ -480,16 +489,21 @@ iframe
 #phonesection
 {
     grid-column: 3;
-    grid-row: 2;
+    grid-row: 1;
     color: white;
     margin-bottom: 50px;
+    margin-top: 60px;
     margin-right: 2%;
     border:0.2em black solid; /* set border width, color, and style in border shorthand*/
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 #phoneimg
 {
-    width: 100%;
+    width: 100%; /* included width,height,padding,overflow x to fix white space issue on right side */
+    padding: 0px; /* including these attributes to avoid whitespace on right side */
+    overflow-x: hidden; 
 }
 
 #phonenumberheading
@@ -507,7 +521,7 @@ iframe
 {
     display: grid; /* divide page elements into columns and rows.*/
     grid-template-columns: 3fr 1fr 3fr; /* set sizing for grid columns */
-    grid-template-rows: 1fr 1fr; /* set sizing for grid rows */
+    grid-template-rows: 0.5fr 1fr; /* set sizing for grid rows */
     column-gap:1%; /* adjust the space between each column in the grid */
     font-family: Arial, Helvetica, sans-serif;
     background-color: #004ECC;
@@ -525,11 +539,9 @@ iframe
 #tutorSubjectsSection
 {
     grid-column: 1;
-    grid-row: 2;
-    margin-top: -300px;
-    margin-bottom: 300px;
+    grid-row: 1;
+    margin-top: 100px;
     margin-left: 10%;
-    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
     color: white;
 }
 
@@ -555,11 +567,10 @@ iframe
 #faqSection
 {
     grid-column: 1;
-    grid-row: 3;
-    margin-top: -250px;
-    margin-bottom: 250px;
+    grid-row: 2;
+    margin-top: 50px;
+    margin-bottom: 50px;
     margin-left: 10%;
-    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
     color: white;
 }
 
@@ -576,24 +587,25 @@ iframe
 
 .faqLISTITEM
 {
-    line-height: 50px; /* specifies the height of a line (spacing between each item).*/
+    line-height: 150%; /* specifies the height of a line (spacing between each item).*/
     margin-left:5%;
-
+    
 }
 
 #nonPackageSection
 {
     grid-column: 3;
-    grid-row: 2;
-    margin-top: -300px;
-    margin-bottom: 300px;
+    grid-row: 1;
+    margin-top: 100px;
     margin-right: 10%;
-    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
     color: white;
+    padding: 0px; /* added this and overflow-x for avoiding white space in right side of screen */
+    overflow-x: hidden; 
 }
 
 #nonPackageHeading
 {
+    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
     text-align: center;
     font-size: 1.8em;
 }
@@ -601,11 +613,14 @@ iframe
 #nonPackageTABLE
 {
     font-size: 1.4em;
+
 }
 
 .nonPackageHeaderCell
 {
     border: 3px solid black;
+    
+
 }
 
 .nonPackageDataCell
@@ -621,16 +636,18 @@ iframe
 #packageSection
 {
     grid-column: 3;
-    grid-row: 3;
-    margin-top: -250px;
-    margin-bottom: 250px;
+    grid-row: 2;
+    margin-top: 50px;
     margin-right: 10%;
-    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
     color: white;
+    padding: 0px; /* added this and overflow-x for avoiding white space in right side of screen */
+    overflow-x: hidden; 
 }
 
 #packageHeading
 {
+    border:0.2em black solid; /* set border width, color, and style in border shorthand*/
+
     text-align: center;
     font-size: 1.8em;
 }
